# mechoe

./: .gitignore
data/_decks/: Premodern The Rock deck by Justin Sheffield.txt  bug-fixes.deck  premodern.deck  render-examples.deck  splits.deck
docs/: guide.html
mart/: .gitignore  Cargo.toml  README.md  artwork_design.md
mart/crates/mart/: Cargo.toml
mart/crates/mart-core/: Cargo.toml
mart/crates/mart-core/src/: fonts.rs  frame.rs  lib.rs  render.rs  rules.rs  symbol_gen.rs  symbols.rs  text.rs
mart/crates/mart-core/src/scryfall/: api.rs  mod.rs
mart/crates/mart/src/: main.rs
mart/examples/: aw.json  birds_of_paradise.json
mcard/: CLAUDE.md  Cargo.toml  artwork_design.md
mcard/crates/mcard/: Cargo.toml
mcard/crates/mcard-core/: Cargo.toml
mcard/crates/mcard-core/src/: frame.rs  geometry.rs  render.rs  symbol_gen.rs  symbols.rs  text.rs
mcard/crates/mcard-core/src/scryfall/: mod.rs
mcard/crates/mcard/src/: main.rs
mcard/examples/: lightning_bolt.json
mdata/: Cargo.toml  README.md
mdata/crates/mdata/: Cargo.toml
mdata/crates/mdata-core/: Cargo.toml
mdata/crates/mdata-core/src/: bulk.rs  db.rs  error.rs  http.rs  index.rs  lib.rs  paths.rs  store.rs  symbols.rs
mdata/crates/mdata/src/: main.rs
mdeck/: Cargo.toml
mdeck/crates/mdeck/: Cargo.toml
mdeck/crates/mdeck/src/: main.rs
mgui/: Cargo.toml
mgui/src/: main.rs
mimg/: Cargo.toml  five_lea.toml  test_cards.toml
mimg/profiles/: LEA_alpha.toml
mimg/src/: main.rs
mtable/: Cargo.toml  design.md  todo.md
mtable/src/: app.rs  card.rs  constants.rs  deck.rs  main.rs  renderer.rs
scripts/: pull-premodern.sh
