[workspace]
resolver = "2"
members = [
    "crates/mcard-core",
    "crates/mcard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skia-safe = "0.78"
resvg = "0.42"
thiserror = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
