[workspace]
resolver = "2"
members = ["crates/mdeck"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive", "env"] }
serde_json = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
