[package]
name    = "mgui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe        = "0.31"
egui          = "0.31"
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fuzzy-matcher = "0.3"
serde_json    = "1"

resvg      = "0.42"

mcard-core = { path = "../mcard/crates/mcard-core" }
mdata-core = { path = "../mdata/crates/mdata-core" }
