[package]
name = "mdeck"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace     = true
clap.workspace       = true
serde_json.workspace = true
rusqlite.workspace   = true

mdata-core = { path = "../../../mdata/crates/mdata-core" }
mart-core  = { path = "../../../mart/crates/mart-core"  }
